# drem-soundscape

./: CLAUDE.md  CMakeLists.txt  PRD.md  README.md  build-windows.sh
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  juce-researcher.md
.claude/skills/add-component/: SKILL.md
.claude/skills/review-audio/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/setup-dev/: SKILL.md
src/: CrossfadeCurveEditor.cpp  CrossfadeCurveEditor.h  FilteredAudioSource.cpp  FilteredAudioSource.h  LoopingAudioSource.cpp  LoopingAudioSource.h  Main.cpp  MainComponent.cpp  MainComponent.h  SoundLayer.cpp  SoundLayer.h  WaveformDisplay.cpp  WaveformDisplay.h
